--- a/public/css/style-fitur.css
+++ b/public/css/style-fitur.css
@@ -31,7 +31,7 @@
     border: 1px solid rgba(255, 255, 255, 0.3);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
-    padding: 20px;
+    padding: 30px;
     transition: transform 0.3s, box-shadow 0.3s;
 }
 
@@ -65,6 +65,9 @@
     text-decoration: underline;
 }
 
+.text-justify {
+    text-align: justify;
+}
 /* Mobile styles */
 @media (max-width: 768px) {
     * {
